Set up index.html for homepage, started project.html for case study

--- a/project.html
+++ b/project.html
@@ -24,12 +24,13 @@
           <a class="navigation-link" href="">Resume</a>
         </nav>
 
-        <section class="hero">
+        <section class="title">
           <h1>Hi! I’m Jess,<h1>
           <p1>a  UX designer and brand strategist from NYC. I specialize in creating unique and personal digital experiences.</p>
         </section>
 
-        <section class="Recent Work"
+
+        <section class="bulletpoints"
           <h1>Recent Work </h1>
           <div class=project-image>
             <img src="images/verve-thumbnail.png" width="150" height="150" border="0" alt="" style="padding:0px;">
@@ -39,7 +40,7 @@
           <button>READ MORE</button>
         </section>
 
-        <section class="About Me"
+        <section class="intro"
           <h1>About Me</h1>
           <div class=project-image>
             <img src="images/jb-headshot.jpg" width="130" height="150" border="0" alt="" style="padding:0px;">
@@ -48,9 +49,24 @@
           <button>LEARN MORE</button>
         </section>
 
-        </div>
+        <section class="discovery"
+        </section>
 
-        <footer class="footer">
+        
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+
+  <footer class="footer">
           <h1>Let's Work Together!</h1>
           <ul class="mdl-mini-footer__link-list">
           <li>
@@ -83,4 +99,5 @@
         </footer>
 
   </body>
+
 </html>
