Updates to index.html and project.html

--- a/index.html
+++ b/index.html
@@ -8,79 +8,66 @@
     <link rel= stylesheet href="styles/reset.css">
     <!-- Custom Styles -->
     <link rel="stylesheet" href="styles/main.css">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
     <div class="container">
 
-        <nav class="navigation">
-          <div class=logo>
-            <img src="images/jess-logo-blue.png" width="167.2" height="220" border="0" alt="" style="padding:0px;">
-          </div>
-          <a class="navigation-link" href="">Work</a>
-          <a class="navigation-link" href="">About</a>
-          <a class="navigation-link" href="">Resume</a>
-        </nav>
+      <nav class="navigation">
+        <a class="navigation-link" href="index.html">
+            <img src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
+          </a>
+        <a class="navigation-link" href="project.html">Work</a>
+        <a class="navigation-link" href="">About</a>
+        <a class="navigation-link" href="">Resume</a>
+      </nav>
 
         <section class="hero">
           <h1>Hi! I’m Jess,<h1>
-          <p1>a  UX designer and brand strategist from NYC. I specialize in creating unique and personal digital experiences.</p>
+          <h2>a  UX designer and brand strategist from NYC. I specialize in creating unique and personal digital experiences.</h2>
         </section>
 
-        <section class="Recent Work"
+        <section class="recent work"
           <h1>Recent Work </h1>
           <div class=project-image>
-            <img src="images/verve-thumbnail.png" width="150" height="150" border="0" alt="" style="padding:0px;">
-            <img src="images/verve-logo.png" width="155.38" height="56.46" border="0" alt="" style="padding:0px;">
+            <img src="images/verve-thumbnail.png" width="150" height="150">
+            <img src="images/verve-logo.png" width="155.38" height="56.46">
           </div>
           <p>Verve for iOS is a cloud storage app that promotes good health and wellness through organization and collaboration.</p>
-          <button>READ MORE</button>
+          <button onclick="window.location.href = 'project.html';">READ MORE</button>
         </section>
 
-        <section class="About Me"
+        <section class="about me"
           <h1>About Me</h1>
           <div class=project-image>
-            <img src="images/jb-headshot.jpg" width="130" height="150" border="0" alt="" style="padding:0px;">
+            <img src="images/jb-headshot.jpg" width="130" height="150">
           </div>
           <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
           <button>LEARN MORE</button>
         </section>
 
-        </div>
-
         <footer class="footer">
           <h1>Let's Work Together!</h1>
-          <ul class="mdl-mini-footer__link-list">
-          <li>
-            <a href="{linkedin.com/in/jessdesignedit}">
-              <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-            </a>
-          </li>
-          <li>
-            <a href="{github.com/jessblanchard}">
-              <i class="fa fa-github-square" aria-hidden="true"></i>
-            </a>
-          </li>
-          <li>
-            <a href="{instagram.com/jessytribble}">
-              <i class="fa fa-facebook-square" aria-hidden="true"></i>
-            </a>
-          </li>
-          <li>
-            <a href="{twitter.com/jesstribble}">
-              <i class="fa fa-twitter-square" aria-hidden="true"></i>
-            </a>
-          </li>
-          <li>
-            <a href="mailto:{jessicahtribble@gmail.com}">
-              <i class="fa fa-envelope-square" aria-hidden="true"></i>
-            </a>
-          </li>
-         </ul>
+          <div class="footer">
+              <a href="{linkedin.com/in/jessdesignedit}">
+                <img src=images/icons/icons8-linkedin-2-500.png>
+                </a>
+              <a href="{github.com/jessblanchard}">
+                <img src="images/icons/icons8-github-500.png">
+                </a>
+              <a href="{instagram.com/jessytribble}">
+                <img src=images/icons/icons8-instagram-camera-500.png>
+                </a>
+              <a href="{twitter.com/jesstribble}">
+                <img src= images/icons/icons8-twitter-500.png>
+                </a>
+              <a href="mailto:{jessicahtribble@gmail.com}">
+                <img src=images/icons/icons8-email-envelope-500.png>
+                </a>
+          </div>
           <p>designed and developed by Jessica Blanchard</p>
         </footer>
-
+    </div>
   </body>
 </html>
