Updates to html structure to facilitate styling & updates to main.css

--- a/project.html
+++ b/project.html
@@ -15,26 +15,29 @@
   <body>
     <div class="container">
 
-        <nav class="navigation">
-          <a class="navigation-link" href="index.html">
-              <img src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
-            </a>
-          <a class="navigation-link" href="project.html">Work</a>
-          <a class="navigation-link" href="">About</a>
-          <a class="navigation-link" href="">Resume</a>
-        </nav>
+      <nav class="navigation">
+        <a class="navigation-logo" href="index.html">
+            <img src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
+          </a>
+        <a class="navigation-work" href="project.html">Work</a>
+        <a class="navigation-about" href="">About</a>
+        <a class="navigation-resume" href="">Resume</a>
+      </nav>
 
-        <section class="project-title"
-          <div class=project-image>
-            <img src="images/verve-thumbnail.png" width="150" height="150" border="0" alt="" style="padding:0px;">
-            <img src="images/verve-logo.png" width="155.38" height="56.46" border="0" alt="" style="padding:0px;">
-          </div>
-          <p>Verve is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
-          <button>view the prototype</button>
-        </section>
+      <section class="project-title">
+        <div class = "project-page-image">
+          <img src="images/verve-thumbnail.png" width="323" height="323">
+        </div>
+        <div class="project-page-logo">
+          <img src="images/verve-logo.png">
+        </div>
+        <p>Verve is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
+        <button onclick="window.location.href = 'project.html';">VIEW THE PROTOTYPE</button>
+    </section>
 
-        <section class="bulletpoints"
-          <div>
+        <section class="bulletpoints">
+
+          <div class = "roles">
             <h1>Roles</h1>
             <ul class = roles>
               <li>
@@ -47,7 +50,7 @@
                 <p>Branding & Identity</p>
             </ul>
           </div>
-          <div>
+          <div class = "deliverables">
             <h1>Deliverables</h1>
             <ul class = deliverables>
               <li>
@@ -70,29 +73,34 @@
                 <p>Hi-Fidelity Prototype</p>
               </ul>
           </div>
-          <div>
-          <h1>Tools Used</h1>
-          <ul class = tools-used>
-            <li>
-              <p>Survey Monkey</p>
-            <li>
-              <p>Figma</p>
-            <li>
-              <p>Marvel</p>
-            <li>
-              <p>Maze</p>
-            <li>
-              <p>Usability Hub</p>
+          <div class = "tools-used">
+            <h1>Tools Used</h1>
+            <ul class = tools-used>
+              <li>
+                <p>Survey Monkey</p>
+              <li>
+                <p>Figma</p>
+              <li>
+                <p>Marvel</p>
+              <li>
+                <p>Maze</p>
+              <li>
+                <p>Usability Hub</p>
           </div>
+
         </section>
 
-        <section class="tldr"
-          <div>
+        <section class="tldr">
+          <div class = "summary">
             <h2>Summary</h2>
             <p>Verve for iOS is a cloud storage app that promotes good health and wellness through organization and collaboration. While allowing users to upload, organize and share any kind of document, Verve places a priority on files that relate to your self care products, notes and activities and provides useful insights on how to make healthier choices to achieve your goals.</p>
-            <h2>Problem</h2>
-            <p>The client challenged us to find an entry into the cloud storage with a unique set of features to meet the needs of a particular audience.
+          </div>
+          <div class = "problem">
+              <h2>Problem</h2>
+              <p>The client challenged us to find an entry into the cloud storage with a unique set of features to meet the needs of a particular audience.
               </p>
+            </div>
+          <div class = "solution">
             <h2>Solution</h2>
             <p>I identified a niche audience and market opportunity for a  cloud storage solution that encourages better grooming, health and wellness.  I designed Verve for iOS  to give users a streamlined cloud storage solution with the added benefit of useful insights.</p>
           </div>
@@ -225,7 +233,7 @@
         </section>
 
         <section class= "information-architecture"
-          <div class= information-architecture
+          <div class= information-architecture>
             <h2> Information architecture</h2>
             <h3>User Stories & Flows</h3>
             <p>With a clear picture of the target audience, I was able to document the high priority user stories that a user would need to fulfill.</p>
@@ -444,7 +452,7 @@
             <img src= "images/Branding/Colors/color6.png"</img>
             <p>I proceeded to prepare a full style guide that included the color palette along side additional branding guidelines such as typography, logo usage, and iconography. </p>
             <button>View the Style Guide</button>
-            <h3>High Fidelity Mockups>
+            <h3>High Fidelity Mockups<h3>
             <p>As I created hi-fi mockups, I  discovered design elements that previously seemed to recede into the background of the app, but in actuality needed to be considered as part of a design pattern. Design features like process tracking dots and text captioning on menu icons, needed to be considered as I was developing  high fidelity mockups.</p>
             <img src= "images/HiFi Mockups/activity-mockup.png"</img>
             <img src= "images/HiFi Mockups/existing-user-dashboard-mockup.png"</img>
@@ -478,7 +486,7 @@
           </div>
         </section>
 
-        <secion class= "lessons-learned"
+        <section class= "lessons-learned"
           <div>
             <h2>Lessons Learned</h2>
             <h3>Ask the Right Questions</h3>
@@ -497,29 +505,29 @@
             <h4>next project</h4>
             <img src ="images/icons/right-arrow.png"</img>
           </div>
-          </nav>
+        </nav>
 
-      <footer class="footer">
-        <h1>Let's Work Together!</h1>
-        <div class="footer">
-            <a href="{linkedin.com/in/jessdesignedit}">
-              <img src=images/icons/icons8-linkedin-2-500.png>
-              </a>
-            <a href="{github.com/jessblanchard}">
-              <img src="images/icons/icons8-github-500.png">
-              </a>
-            <a href="{instagram.com/jessytribble}">
-              <img src=images/icons/icons8-instagram-camera-500.png>
-              </a>
-            <a href="{twitter.com/jesstribble}">
-              <img src= images/icons/icons8-twitter-500.png>
-              </a>
-            <a href="mailto:{jessicahtribble@gmail.com}">
-              <img src=images/icons/icons8-email-envelope-500.png>
-              </a>
-        </div>
-        <p>designed and developed by Jessica Blanchard</p>
-      </footer>
+        <footer class="verve-footer">
+          <h1 class="verve-footer-header">Let's Work Together!</h1>
+          <div class="verve-footer-links">
+              <a href="{linkedin.com/in/jessdesignedit}">
+                <img src=images/icons/icons8-linkedin-2-500.png>
+                </a>
+              <a href="{github.com/jessblanchard}">
+                <img src="images/icons/icons8-github-500.png">
+                </a>
+              <a href="{instagram.com/jessytribble}">
+                <img src=images/icons/icons8-instagram-camera-500.png>
+                </a>
+              <a href="{twitter.com/jesstribble}">
+                <img src= images/icons/icons8-twitter-500.png>
+                </a>
+              <a href="mailto:{jessicahtribble@gmail.com}">
+                <img src=images/icons/icons8-email-envelope-500.png>
+                </a>
+          </div>
+          <p class="verve-footer-text">designed and developed by Jessica Blanchard</p>
+        </footer>
     </div>
   </body>
 </html>
