continued updates to html and css structure.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="about-me">
           <h1>About Me</h1>
           <div class=personal-image>
-            <img src="images/jb-headshot2.jpg">
+            <img src="images/jb-headshot2.svg">
           </div>
           <p>Hi, I’m Jessica Blanchard, designer and brand strategist. I’m also an urban homesteader, hedge lover, Persian cat (and boy) mom, true crime enthusiast, contemporary art collector and prison reform crusader. I’m passionate about giving back and designing solutions that make community service inherent to every day life. I enjoy designing nuanced solutions that make the internet more enjoyable.</p>
           <button>LEARN MORE</button>
