--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
 
-      <nav class="navigation">
+        <nav class="navigation">
         <a class="navigation-logo" href="index.html">
             <img src="images/jess-logo-blue.png" width="62" height="81.78" border="0" alt="" style="padding:0px;">
           </a>
@@ -24,7 +24,7 @@
         <a class="navigation-resume" href="">Resume</a>
       </nav>
 
-      <section class="project-title">
+        <section class="project-title">
         <div class = "project-page-image">
           <img src="images/verve-thumbnail.png" width="323" height="323">
         </div>
@@ -33,7 +33,7 @@
         </div>
         <p>Verve is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
         <button onclick="window.location.href = 'project.html';">VIEW THE PROTOTYPE</button>
-    </section>
+      </section>
 
         <section class="bulletpoints">
 
@@ -106,50 +106,56 @@
           </div>
           </section>
 
-        <section class="discovery"
+        <section class="discovery">
           <div>
             <h2>Discovery & Research</h2>
             <h3>User Survey</h3>
             <p>I embarked on the project by first surveying a group of participants to better understand how they use cloud storage.</p>
             <table class="survey-chart">
               <tr>
-                <td>67%</td>
-                <td>50%</td>
+                <td class = "chart-header">67%</td>
+                <td class = "chart-header">50%</td>
               </tr>
               <tr>
-                <td>prioritize physical, mental & emotional wellbeing</td>
-                <td>are motivated to achieve goals with social support</td>
+                <td class = "chart-body">prioritize physical, mental & emotional <strong class = "chart-emphasis">wellbeing</strong></td>
+                <td class = "chart-body">are <strong class = "chart-emphasis">motivated</strong> to achieve goals with social support</td>
               </tr>
               <tr>
-                <td>94%</td>
-                <td>67%</td>
+                <td class = "chart-header">94%</td>
+                <td class = "chart-header">67%</td>
               </tr>
               <tr>
-                <td>create or view files on their mobile device</td>
-                <td>would pay more for advanced features</td>
+                <td class = "chart-body">create or view files on their <strong class = "chart-emphasis">mobile</strong> device</td>
+                <td class = "chart-body">would pay more for advanced <strong class = "chart-emphasis">features</strong></td>
               </tr>
               </table>
             <h3>User Personas</h3>
             <p>The survey provided great insight into the attitudes and opinions of potential users, and I constructed two personas based on the survey responses to represent the trends I spotted.</p>
             <div class="molly">
-              <img src="images/Personas/Molly.png">
-              <h1>Molly, 30</h1>
-              <h3>Graphic Designer</h3>
-              <p>Bio: Molly is a 30 year old creative solopreneur based in New York. As a a digital nomad and needs her documents to be accessible anywhere she goes. She is increasingly applying a cloud mentality to other aspects of her life and wants access to inspiring documentation and communication on the go at any time.</p>
-              <p>Goals: Stay organized; stay up to date and on trend.</p>
-              <p>Frustrations: Too many restrictions, corporate oversight and an uninspiring UI</p>
-              <p>Motivations: Clean simplicity, flexibility and inspiration to create</p>
-              <p>Quote: “My documents may be organized, but I’d like to “keep that same energy” outside of my work too.”</p>
+              <img src = "images/molly-persona.svg">
+              <!-- <img class = "molly-pic" src="images/Personas/Molly.png">
+              <div class = "molly-text">
+                  <h1>Molly, 30</h1>
+                  <h3>Graphic Designer</h3>
+                  <p><strong class = "persona">Bio:</strong> Molly is a 30 year old creative solopreneur based in New York. As a a digital nomad and needs her documents to be accessible anywhere she goes. She is increasingly applying a cloud mentality to other aspects of her life and wants access to inspiring documentation and communication on the go at any time.</p>
+                  <p><strong class = "persona">Goals:</strong> Stay organized; stay up to date and on trend.</p>
+                  <p><strong class = "persona">Frustrations:</strong> Too many restrictions, corporate oversight and an uninspiring UI</p>
+                  <p><strong class = "persona">Motivations:</strong> Clean simplicity, flexibility and inspiration to create</p>
+                  <p><strong class = "persona">Quote:</strong> “My documents may be organized, but I’d like to “keep that same energy” outside of my work too.”</p>
+              </div> -->
             </div>
             <div class="angelica">
-              <img src="images/Personas/Angelica.png">
-              <h1>Angelica,  38</h1>
-              <h3>Lifestyle Blogger & Wellness Consultant</h3>
-              <p>Bio: Angelica is a 38 year old health and wellness lifestyle blogger. She uses cloud storage to keep her notes and ideas organized, collaborate with her team and share resources and plans with her private consulting clients. She works hard and would like to apply as much organization the wellness of her and her clients as she does to the business of her work.</p>
-              <p>Goals: Getting work done, efficiently, affordably and mindfully</p>
-              <p>Frustrations: The cost of scaling up</p>
-              <p>Motivations: Efficiency, collaboration and advanced features from a provider I can trust</p>
-              <p>Quote: “My clients deserves the same level of care that I would give myself.”</p>
+              <img src = "images/angelica-persona.svg">
+              <!-- <img class = "angelica-pic" src="images/Personas/Angelica.png">
+              <div class = "molly-text">
+                <h1>Angelica,  38</h1>
+                <h3>Lifestyle Blogger & Wellness Consultant</h3>
+                <p><strong class = "persona"></strong>Bio: Angelica is a 38 year old health and wellness lifestyle blogger. She uses cloud storage to keep her notes and ideas organized, collaborate with her team and share resources and plans with her private consulting clients. She works hard and would like to apply as much organization the wellness of her and her clients as she does to the business of her work.</p>
+                <p><strong class = "persona"></strong>Goals: Getting work done, efficiently, affordably and mindfully</p>
+                <p><strong class = "persona"></strong>Frustrations: The cost of scaling up</p>
+                <p><strong class = "persona"></strong>Motivations: Efficiency, collaboration and advanced features from a provider I can trust</p>
+                <p><strong class = "persona"></strong>Quote: “My clients deserves the same level of care that I would give myself.”</p>
+              </div> -->
             </div>
             <h3>Competitive Analysis</h3>
             <p>I analyzed four competitors, Google Drive, Dropbox, Flöka and LovelyLoot . The most important revelation was that while general providers are overlooking niches, niche providers are severely limiting functionality. Neither provides  both general use and opportunity for specialization.
