CSS styling on Discovery section.

--- a/project.html
+++ b/project.html
@@ -107,135 +107,136 @@
           </section>
 
         <section class="discovery">
-          <div>
-            <h2>Discovery & Research</h2>
-            <h3>User Survey</h3>
-            <p>I embarked on the project by first surveying a group of participants to better understand how they use cloud storage.</p>
-            <table class="survey-chart">
-              <tr>
-                <td class = "chart-header">67%</td>
-                <td class = "chart-header">50%</td>
-              </tr>
-              <tr>
-                <td class = "chart-body">prioritize physical, mental & emotional <strong class = "chart-emphasis">wellbeing</strong></td>
-                <td class = "chart-body">are <strong class = "chart-emphasis">motivated</strong> to achieve goals with social support</td>
-              </tr>
-              <tr>
-                <td class = "chart-header">94%</td>
-                <td class = "chart-header">67%</td>
-              </tr>
-              <tr>
-                <td class = "chart-body">create or view files on their <strong class = "chart-emphasis">mobile</strong> device</td>
-                <td class = "chart-body">would pay more for advanced <strong class = "chart-emphasis">features</strong></td>
-              </tr>
-              </table>
-            <h3>User Personas</h3>
-            <p>The survey provided great insight into the attitudes and opinions of potential users, and I constructed two personas based on the survey responses to represent the trends I spotted.</p>
-            <div class="molly">
-              <img src = "images/molly-persona.svg">
-              <!-- <img class = "molly-pic" src="images/Personas/Molly.png">
-              <div class = "molly-text">
-                  <h1>Molly, 30</h1>
-                  <h3>Graphic Designer</h3>
-                  <p><strong class = "persona">Bio:</strong> Molly is a 30 year old creative solopreneur based in New York. As a a digital nomad and needs her documents to be accessible anywhere she goes. She is increasingly applying a cloud mentality to other aspects of her life and wants access to inspiring documentation and communication on the go at any time.</p>
-                  <p><strong class = "persona">Goals:</strong> Stay organized; stay up to date and on trend.</p>
-                  <p><strong class = "persona">Frustrations:</strong> Too many restrictions, corporate oversight and an uninspiring UI</p>
-                  <p><strong class = "persona">Motivations:</strong> Clean simplicity, flexibility and inspiration to create</p>
-                  <p><strong class = "persona">Quote:</strong> “My documents may be organized, but I’d like to “keep that same energy” outside of my work too.”</p>
-              </div> -->
+          <h2>Discovery & Research</h2>
+            <div class ="user-survey">
+              <h3>User Survey</h3>
+              <p>I embarked on the project by first surveying a group of participants to better understand how they use cloud storage.</p>
+              <table class="survey-chart">
+                <tr>
+                  <td class = "chart-header">67%</td>
+                  <td class = "chart-header">50%</td>
+                </tr>
+                <tr>
+                  <td class = "chart-body">prioritize physical, mental & emotional <strong class = "chart-emphasis">wellbeing</strong></td>
+                  <td class = "chart-body">are <strong class = "chart-emphasis">motivated</strong> to achieve goals with social support</td>
+                </tr>
+                <tr>
+                  <td class = "chart-header">94%</td>
+                  <td class = "chart-header">67%</td>
+                </tr>
+                <tr>
+                  <td class = "chart-body">create or view files on their <strong class = "chart-emphasis">mobile</strong> device</td>
+                  <td class = "chart-body">would pay more for advanced <strong class = "chart-emphasis">features</strong></td>
+                </tr>
+                </table>
             </div>
-            <div class="angelica">
-              <img src = "images/angelica-persona.svg">
-              <!-- <img class = "angelica-pic" src="images/Personas/Angelica.png">
-              <div class = "molly-text">
-                <h1>Angelica,  38</h1>
-                <h3>Lifestyle Blogger & Wellness Consultant</h3>
-                <p><strong class = "persona"></strong>Bio: Angelica is a 38 year old health and wellness lifestyle blogger. She uses cloud storage to keep her notes and ideas organized, collaborate with her team and share resources and plans with her private consulting clients. She works hard and would like to apply as much organization the wellness of her and her clients as she does to the business of her work.</p>
-                <p><strong class = "persona"></strong>Goals: Getting work done, efficiently, affordably and mindfully</p>
-                <p><strong class = "persona"></strong>Frustrations: The cost of scaling up</p>
-                <p><strong class = "persona"></strong>Motivations: Efficiency, collaboration and advanced features from a provider I can trust</p>
-                <p><strong class = "persona"></strong>Quote: “My clients deserves the same level of care that I would give myself.”</p>
-              </div> -->
+            <div class = "user-personas">
+              <h3>User Personas</h3>
+              <p>The survey provided great insight into the attitudes and opinions of potential users, and I constructed two personas based on the survey responses to represent the trends I spotted.</p>
+              <div class="molly">
+                <img src = "images/molly-persona.svg">
+                <!-- <img class = "molly-pic" src="images/Personas/Molly.png">
+                <div class = "molly-text">
+                    <h1>Molly, 30</h1>
+                    <h3>Graphic Designer</h3>
+                    <p><strong class = "persona">Bio:</strong> Molly is a 30 year old creative solopreneur based in New York. As a a digital nomad and needs her documents to be accessible anywhere she goes. She is increasingly applying a cloud mentality to other aspects of her life and wants access to inspiring documentation and communication on the go at any time.</p>
+                    <p><strong class = "persona">Goals:</strong> Stay organized; stay up to date and on trend.</p>
+                    <p><strong class = "persona">Frustrations:</strong> Too many restrictions, corporate oversight and an uninspiring UI</p>
+                    <p><strong class = "persona">Motivations:</strong> Clean simplicity, flexibility and inspiration to create</p>
+                    <p><strong class = "persona">Quote:</strong> “My documents may be organized, but I’d like to “keep that same energy” outside of my work too.”</p>
+                </div> -->
+              </div>
+              <div class="angelica">
+                <img src = "images/angelica-persona.svg">
+                <!-- <img class = "angelica-pic" src="images/Personas/Angelica.png">
+                <div class = "molly-text">
+                  <h1>Angelica,  38</h1>
+                  <h3>Lifestyle Blogger & Wellness Consultant</h3>
+                  <p><strong class = "persona"></strong>Bio: Angelica is a 38 year old health and wellness lifestyle blogger. She uses cloud storage to keep her notes and ideas organized, collaborate with her team and share resources and plans with her private consulting clients. She works hard and would like to apply as much organization the wellness of her and her clients as she does to the business of her work.</p>
+                  <p><strong class = "persona"></strong>Goals: Getting work done, efficiently, affordably and mindfully</p>
+                  <p><strong class = "persona"></strong>Frustrations: The cost of scaling up</p>
+                  <p><strong class = "persona"></strong>Motivations: Efficiency, collaboration and advanced features from a provider I can trust</p>
+                  <p><strong class = "persona"></strong>Quote: “My clients deserves the same level of care that I would give myself.”</p>
+                </div> -->
+              </div>
             </div>
-            <h3>Competitive Analysis</h3>
-            <p>I analyzed four competitors, Google Drive, Dropbox, Flöka and LovelyLoot . The most important revelation was that while general providers are overlooking niches, niche providers are severely limiting functionality. Neither provides  both general use and opportunity for specialization.
-              </p>
-            <table class="swot-chart"
-              <tr>
-                <td>
-                  <img src="images/Competitor Logos/googledrive.png">
-                </td>
-              </tr>
-              <tr>
-                <td>S</td>
-                <td>W</td>
-                <td>O</td>
-                <td>T</td>
-              </tr>
-              <tr>
-                <td>Industry Recognition; integration with other Google Services</td>
-                <td>Stale UI evolution;  big data distrust</td>
-                <td>Improve mobile experience and UI; allow more customization</td>
-                <td>Smaller companies appealing to those distrustful of large corporations; niche providers catering to smaller groups more powerfully </td>
-              </tr>
-
-              <tr>
-                <td>
-                  <img src="images/Competitor Logos/dropbox.png">
-                </td>
-              </tr>
-              <tr>
-                <td>S</td>
-                <td>W</td>
-                <td>O</td>
-                <td>T</td>
-              </tr>
-              <tr>
-                <td>Robust features; UI updates on trend</td>
-                <td>Low freemium offerings; Paper mobile  app not integrated with documents app; big data distrust</td>
-                <td>Offer more freemium bandwidth; allow more customization</td>
-                <td>lower cost competitiors; small data niche providers catering to smaller groups more powerfully </td>
-              </tr>
-
-              <tr>
-                <td>
-                  <img src="images/Competitor Logos/lovelyloot.png">
-                </td>
-              </tr>
-              <tr>
-                <td>S</td>
-                <td>W</td>
-                <td>O</td>
-                <td>T</td>
-              </tr>
-              <tr>
-                <td>Strong niche definition; clean and simple interface; strong product catalog for easily adding your items</td>
-                <td>Limited to just beauty; low brand recognition </td>
-                <td>Offer overall wellness product tracking; expand file type compatibility</td>
-                <td>Limited options may encourage users to turn to more robust, less niche specific alternatives.  </td>
-              </tr>
-
-              <tr>
-                <td>
-                  <img src="images/Competitor Logos/Floka.png">
-                </td>
-              </tr>
-              <tr>
-                <td>S</td>
-                <td>W</td>
-                <td>O</td>
-                <td>T</td>
-              </tr>
-              <tr>
-                <td>Strong niche definition, allows for specific customer targeting</td>
-                <td>MVP in initial release, but feature bloat makes it hard to know where to begin; UI deficiencies; new to market and low recognition </td>
-                <td>Expand to allow sharing; make it more gender neutral; expand file type compatibility</td>
-                <td>Slow development may lose engagement; feature bloat may lead to user fatigue; users may turn to a simpler product..
+            <div class = "competitive-analysis">
+              <h3>Competitive Analysis</h3>
+              <p>I analyzed four competitors, Google Drive, Dropbox, Flöka and LovelyLoot . The most important revelation was that while general providers are overlooking niches, niche providers are severely limiting functionality. Neither provides  both general use and opportunity for specialization.
+                </p>
+              <table class="swot-chart">
+                <th class = "swot-logo" >
+                  <td>
+                    <img src="images/Competitor Logos/googledrive.png">
                   </td>
-              </tr>
+                  </th>
+                <tr class ="swot1">
+                  <td>S</td>
+                  <td>W</td>
+                  <td>O</td>
+                  <td>T</td>
+                </tr>
+                <tr class ="swot-points1">
+                  <td>Industry Recognition; integration with other Google Services</td>
+                  <td>Stale UI evolution;  big data distrust</td>
+                  <td>Improve mobile experience and UI; allow more customization</td>
+                  <td>Smaller companies appealing to those distrustful of large corporations; niche providers catering to smaller groups more powerfully </td>
+                </tr>
+                <th class = "swot-logo">
+                  <td>
+                    <img src="images/Competitor Logos/dropbox.png">
+                  </td>
+                  </th>
+                <tr class ="swot2">
+                  <td>S</td>
+                  <td>W</td>
+                  <td>O</td>
+                  <td>T</td>
+                </tr>
+                <tr class ="swot-points2">
+                  <td>Robust features; UI updates on trend</td>
+                  <td>Low freemium offerings; Paper mobile  app not integrated with documents app; big data distrust</td>
+                  <td>Offer more freemium bandwidth; allow more customization</td>
+                  <td>lower cost competitiors; small data niche providers catering to smaller groups more powerfully </td>
+                </tr>
+                <th class = "swot-logo">
+                  <td>
+                    <img src="images/Competitor Logos/lovelyloot.png">
+                  </td>
+                  </th>
+                <tr class ="swot3">
+                  <td>S</td>
+                  <td>W</td>
+                  <td>O</td>
+                  <td>T</td>
+                </tr>
+                <tr class ="swot-points3">
+                  <td>Strong niche definition; clean and simple interface; strong product catalog for easily adding your items</td>
+                  <td>Limited to just beauty; low brand recognition </td>
+                  <td>Offer overall wellness product tracking; expand file type compatibility</td>
+                  <td>Limited options may encourage users to turn to more robust, less niche specific alternatives.  </td>
+                </tr>
+                <th class = "swot-logo">
+                  <td>
+                    <img src="images/Competitor Logos/Floka.png">
+                  </td>
+                  </th>
+                <tr class ="swot4">
+                  <td>S</td>
+                  <td>W</td>
+                  <td>O</td>
+                  <td>T</td>
+                </tr>
+                <tr class ="swot-points4">
+                  <td>Strong niche definition, allows for specific customer targeting</td>
+                  <td>MVP in initial release, but feature bloat makes it hard to know where to begin; UI deficiencies; new to market and low recognition </td>
+                  <td>Expand to allow sharing; make it more gender neutral; expand file type compatibility</td>
+                  <td>Slow development may lose engagement; feature bloat may lead to user fatigue; users may turn to a simpler product..
+                    </td>
+                </tr>
 
-            </table>
-          </div>
+              </table>
+            </div>
         </section>
 
         <section class= "information-architecture"
