--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section class="hero">
           <h1>Hi! I’m Jess,<h1>
-          <h2>a UX designer and brand strategist from NYC. I specialize in creating unique and personal digital experiences.</h2>
+          <h2>a UX designer and brand strategist from NYC. I specialize in creating <strong class = "hero-emphasis"> unique</strong> and <strong class = "hero-emphasis">personal</strong> digital experiences.</h2>
         </section>
 
         <section class="recent-work">
